enlaces, formatos de paginas

--- a/index.html
+++ b/index.html
@@ -13,89 +13,87 @@
 </head>
 
 <body>
-
-    <section class="contenedor1">
-        <header class="header">
-            <img class="logo1" src="../img/burger_logo.png" alt="inicio">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-              <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
-            </label>
-            <nav class="nav">
-              <div class="menu1">
-              <ul>
-                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-              </ul>
-            </div>
-            <img class="logo2" src="../img/burger_logo.png" alt="logo2">
-            </nav>
-          </header>
-        <div class="banner">
-            <div class="banner_textos">
-                <h1>AMAMOS LAS HAMBURGUESAS</h1>
-                <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi dicta
-                    ad
-                    optio qui nesciunt
-                    nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
-                    perferendis
-                    dolorum.</p>
-                <a href="index.html#¿Qué dicen nuestros clientes?"></a>
-            </div>
+    <div class="body_index">
+        <div class="fondo_index">
+            <section class="contenedor1">
+                <header class="header">
+                    <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
+                    <input type="checkbox" id="menu">
+                    <label for="menu">
+                        <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+                    </label>
+                    <nav class="nav">
+                        <div class="menu1">
+                            <ul>
+                                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                            </ul>
+                        </div>
+                        <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+                    </nav>
+                </header>
+                <div class="banner">
+                    <div class="banner_textos">
+                        <h1>AMAMOS LAS HAMBURGUESAS</h1>
+                        <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi
+                            dicta
+                            ad
+                            optio qui nesciunt
+                            nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
+                            perferendis
+                            dolorum.</p>
+                        <a href="index.html#¿Qué dicen nuestros clientes?"></a>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-    <section class="contenedor2">
+        <section class="contenedor2">
 
-        <section>
-            <div class="texto">
-                <h1 class="quedicen">¿Qué dicen nuestros clientes?</h1>
-                <p class="centro">¡Rockealas como quieras!</p>
-            </div>
-            <!-- Cards -->
+            <section>
+                <div class="texto">
+                    <h1 class="quedicen">¿Qué dicen nuestros clientes?</h1>
+                    <p class="centro">¡Rockealas como quieras!</p>
+                </div>
+                <!-- Cards -->
 
-            <div class="cards">
-                <article class="card">
-                    <p>¡La Marley es lo más! Y es tal cual se ve en las fotos.</p>
-                </article>
+                <div class="cards">
+                    <article class="card">
+                        <p>¡La Marley es lo más! Y es tal cual se ve en las fotos.</p>
+                    </article>
 
-                <article class="card">
-                    <p>¡Son tremendas! ¡Mega hamburguesas! Me las recomendó un amigo, y fue lo mejor que me pasó en la
-                        vida!</p>
-                </article>
+                    <article class="card">
+                        <p>¡Son tremendas! ¡Mega hamburguesas! Me las recomendó un amigo, y fue lo mejor que me pasó en
+                            la
+                            vida!</p>
+                    </article>
 
-                <article class="card">
-                    <p>En las juntadas con amigos nunca faltan las Rockburger</p>
-                </article>
-            </div>
+                    <article class="card">
+                        <p>En las juntadas con amigos nunca faltan las Rockburger</p>
+                    </article>
+                </div>
 
 
-            <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
+                <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
 
+            </section>
+            <footer>
+                <div>
+                    <button type="button">SUSCRIBETE</button>
+                </div>
+                <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+                <div class="redes">
+                    <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+                    <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+                    <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+                </div>
+            </footer>
+    
         </section>
 
-        <footer>
-            <div class="redes">
-                <img src="./img/face.png" alt="logo facebook" width="40px" height="40px">
-                <img src="./img/insta.png" alt="logo instagram" width="40px" height="40px">
-                <img src="./img/twitter.png" alt="logo twitter" width="40px" height="40px">
-            </div>
-            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-            <div>
-                <button type="button">SUSCRIBETE</button>
-            </div>
-
-        </footer>
-    </section>
-
-
-
-
-
-
-
-
+        
+    </div>
 </body>
 
 
