--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,21 +16,21 @@
 <body>
     <section class="pagina_nosotros">
         <header class="header">
-            <img class="logo1" src="../img/burger_logo.png" alt="inicio">
+            <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
             <input type="checkbox" id="menu">
             <label for="menu">
               <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
             </label>
             <nav class="nav">
               <div class="menu1">
-              <ul>
-                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-              </ul>
-            </div>
-            <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+                <ul>
+                  <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                  <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                  <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                  <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                </ul>
+              </div>
+              <img class="logo2" src="../img/burger_logo.png" alt="logo2">
             </nav>
           </header>
 
@@ -39,17 +39,17 @@
 
 
 
-        <footer class="footerprod">
-            <div class="redes">
-                <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
-                <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
-                <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+        <footer>
+            <div>
+              <button type="button">SUSCRIBETE</button>
             </div>
             <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-            <div>
-                <button type="button">SUSCRIBETE</button>
+            <div class="redes">
+              <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+              <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+              <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
             </div>
-        </footer>
+          </footer>
     </section>
 
 </body>
