--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,121 +14,120 @@
 </head>
 
 <body>
-  <section class="pagina_productos">
+  <div class="fondo_productos">
+    <section class="pagina_productos">
+      <header class="header">
+        <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
+        <input type="checkbox" id="menu">
+        <label for="menu">
+          <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+        </label>
+        <nav class="nav">
+          <div class="menu1">
+            <ul>
+              <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+              <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+              <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+              <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+            </ul>
+          </div>
+          <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+        </nav>
+      </header>
 
-    <header class="header">
-      <img class="logo1" src="../img/burger_logo.png" alt="inicio">
-      <a href="../index.html"><img src="../img/burger_logo.png" alt=""></a>
-      <input type="checkbox" id="menu">
-      <label for="menu">
-        <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
-      </label>
-      <nav class="nav">
-        <div class="menu1">
-        <ul>
-          <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-          <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-          <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-          <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-        </ul>
+      <h1 class="productos">Productos</h1>
+
+      <div class="swiper mySwiper-1">
+        <div class="swiper-wrapper">
+
+          <div class="swiper-slide">
+            <div class="slider">
+              <div class="slider-text">
+                <h1>Hamburguesa Bacon</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
+                  saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
+                  sapiente corporis.</p>
+              </div>
+              <div class="slider_img">
+                <img src="../img/hamburguesas_bacon.png" alt="hamburguesa_bacon">
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="slider">
+              <div class="slider-text">
+                <h1>Hamburguesa Pollo</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
+                  saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
+                  sapiente corporis.</p>
+              </div>
+              <div class="slider_img">
+                <img src="../img/hamburguesas_pollo.png" alt="hamburguesa_pollo">
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="slider">
+              <div class="slider-text">
+                <h1>Hamburguesa Morada</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
+                  saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
+                  sapiente corporis.</p>
+              </div>
+              <div class="slider_img">
+                <img src="../img/hamburguesas_morada.png" alt="hamburguesa_morada">
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="slider">
+              <div class="slider-text">
+                <h1>Hamburguesa Special</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
+                  saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
+                  sapiente corporis.</p>
+              </div>
+              <div class="slider_img">
+                <img src="../img/hamburguesas_special.png" alt="hamburguesa_special">
+              </div>
+            </div>
+          </div>
+
+
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-pagination"></div>
+        </div>
+
       </div>
-      <img class="logo2" src="../img/burger_logo.png" alt="logo2">
-      </nav>
-    </header>
 
-    <h1 class="productos">Productos</h1>
 
-    <div class="swiper mySwiper-1">
-      <div class="swiper-wrapper">
 
-        <div class="swiper-slide">
-          <div class="slider">
-            <div class="slider-text">
-              <h1>Hamburguesa Bacon</h1>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
-                saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
-                sapiente corporis.</p>
-            </div>
-            <div class="slider_img">
-              <img src="../img/hamburguesas_bacon.png" alt="hamburguesa_bacon">
-            </div>
-          </div>
+
+
+
+
+
+      <footer>
+        <div>
+          <button type="button">SUSCRIBETE</button>
         </div>
-
-        <div class="swiper-slide">
-          <div class="slider">
-            <div class="slider-text">
-              <h1>Hamburguesa Pollo</h1>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
-                saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
-                sapiente corporis.</p>
-            </div>
-            <div class="slider_img">
-              <img src="../img/hamburguesas_pollo.png" alt="hamburguesa_pollo">
-            </div>
-          </div>
+        <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+        <div class="redes">
+          <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+          <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+          <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
         </div>
+      </footer>
+    </section>
 
-        <div class="swiper-slide">
-          <div class="slider">
-            <div class="slider-text">
-              <h1>Hamburguesa Morada</h1>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
-                saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
-                sapiente corporis.</p>
-            </div>
-            <div class="slider_img">
-              <img src="../img/hamburguesas_morada.png" alt="hamburguesa_morada">
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="slider">
-            <div class="slider-text">
-              <h1>Hamburguesa Special</h1>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore aspernatur vel blanditiis
-                saepe necessitatibus aut neque quae eos laudantium deserunt beatae ab ratione unde rerum, iusto ex
-                sapiente corporis.</p>
-            </div>
-            <div class="slider_img">
-              <img src="../img/hamburguesas_special.png" alt="hamburguesa_special">
-            </div>
-          </div>
-        </div>
-
-
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-pagination"></div>
-      </div>
-
-    </div>
-
-
-
-
-
-
-
-
-    <footer>
-      <div>
-        <button type="button">SUSCRIBETE</button>
-      </div> 
-      <div class="redes"> 
-        <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
-        <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
-        <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
-      </div>
-      <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-      
-    </footer>
-  </section>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
-  <script src="../bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
+    <script src="../bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src=""></script>
+  </div>
 </body>
 
 
