--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -14,28 +14,29 @@
 </head>
 
 <body>
+    <div class="fondo_tiendas">
     <section class="pagina_tiendas">
         <header class="header">
-            <img class="logo1" src="../img/burger_logo.png" alt="inicio">
+            <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
             <input type="checkbox" id="menu">
             <label for="menu">
-              <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+                <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
             </label>
             <nav class="nav">
-              <div class="menu1">
-              <ul>
-                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-              </ul>
-            </div>
-            <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+                <div class="menu1">
+                    <ul>
+                        <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                        <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                        <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                        <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                    </ul>
+                </div>
+                <img class="logo2" src="../img/burger_logo.png" alt="logo2">
             </nav>
-          </header>
+        </header>
 
 
-        <h1>Tiendas</h1>
+        <h1 class="tiendas">Tiendas</h1>
         <div>
             <img src="../img/estilo-dibujos-animados-vista-tienda-cafe_134830-697.jpg" alt="Imagen tienda 1">
 
@@ -56,18 +57,19 @@
             <a href="#">mapa ubicación</a>
         </div>
 
-        <footer class="footerprod">
+        <footer>
+            <div>
+                <button type="button">SUSCRIBETE</button>
+            </div>
+            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
             <div class="redes">
                 <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
                 <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
                 <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
             </div>
-            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-            <div>
-                <button type="button">SUSCRIBETE</button>
-            </div>
         </footer>
     </section>
+</div>
 </body>
 
 </html>
