modificacion tienda y nosotros

--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
                 <div class="banner">
                     <div class="banner_textos">
                         <h1>AMAMOS LAS HAMBURGUESAS</h1>
-                        <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi
-                            dicta
-                            ad
-                            optio qui nesciunt
-                            nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
-                            perferendis
-                            dolorum.</p>
+                        <p class="centro">Rockburger es la pasión, el disfrute, el relax, la adrenalina, la paz... Todo lo que encuentres del rock, pero en una hamburguesa. Disfrutala, sentila, amala, hacéla tuya! Rockeala como quieras!</p>
                         <a href="index.html#¿Qué dicen nuestros clientes?"></a>
                     </div>
                 </div>
