--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,44 +14,48 @@
 </head>
 
 <body>
-    <section class="pagina_nosotros">
-        <header class="header">
-            <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
-            <input type="checkbox" id="menu">
-            <label for="menu">
-              <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
-            </label>
-            <nav class="nav">
-              <div class="menu1">
-                <ul>
-                  <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-                  <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-                  <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-                  <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-                </ul>
-              </div>
-              <img class="logo2" src="../img/burger_logo.png" alt="logo2">
-            </nav>
-          </header>
+    <div class="fondo_nosotros">
+        <section class="pagina_nosotros">
+            <header class="header">
+                <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
+                <input type="checkbox" id="menu">
+                <label for="menu">
+                    <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+                </label>
+                <nav class="nav">
+                    <div class="menu1">
+                        <ul>
+                            <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                            <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                            <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                            <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                        </ul>
+                    </div>
+                    <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+                </nav>
+            </header>
 
-        <h1 class="nosotros">Nosotros</h1>
-
-
-
-
-        <footer>
-            <div>
-              <button type="button">SUSCRIBETE</button>
+            <h1 class="nosotros">Nosotros</h1>
+            <div class="principal">
+                <img src="../img/beatles.jpg" class="beatles" alt="beatles">
+                <p class="descripcion">Rockburger es la pasión, el disfrute, el relax, la adrenalina, la paz... Todo lo que encuentres del
+                    rock,
+                    pero en una hamburguesa. Disfrutala, sentila, amala, hacéla tuya! Rockeala como quieras!</p>
             </div>
-            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-            <div class="redes">
-              <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
-              <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
-              <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
-            </div>
-          </footer>
-    </section>
 
+            <footer>
+                <div>
+                    <button type="button">SUSCRIBETE</button>
+                </div>
+                <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+                <div class="redes">
+                    <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+                    <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+                    <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+                </div>
+            </footer>
+        </section>
+    </div>
 </body>
 
 </html>
