--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -15,61 +15,62 @@
 
 <body>
     <div class="fondo_tiendas">
-    <section class="pagina_tiendas">
-        <header class="header">
-            <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
-            </label>
-            <nav class="nav">
-                <div class="menu1">
-                    <ul>
-                        <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-                        <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-                        <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-                        <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-                    </ul>
+        <section class="pagina_tiendas">
+            <header class="header">
+                <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
+                <input type="checkbox" id="menu">
+                <label for="menu">
+                    <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+                </label>
+                <nav class="nav">
+                    <div class="menu1">
+                        <ul>
+                            <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                            <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                            <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                            <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                        </ul>
+                    </div>
+                    <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+                </nav>
+            </header>
+
+
+            <h1 class="tiendas">Tiendas</h1>
+            <div class="grupo_tiendas">
+                <div class="tienda1">
+                    <img class="tien1" src="../img/estilo-dibujos-animados-vista-tienda-cafe_134830-697.jpg" alt="Imagen tienda 1">
+
+                    <p>ubicación de la tienda 1</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2312.942762731088!2d-57.97361190439653!3d-34.931661750675815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680673953773!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <img class="logo2" src="../img/burger_logo.png" alt="logo2">
-            </nav>
-        </header>
-
-
-        <h1 class="tiendas">Tiendas</h1>
-        <div>
-            <img src="../img/estilo-dibujos-animados-vista-tienda-cafe_134830-697.jpg" alt="Imagen tienda 1">
-
-            <p>ubicación de la tienda 1</p>
-            <a href="#">mapa ubicación</a>
-        </div>
-        <br>
-        <div>
-            <img src="../img/tienda-productos-diarios-ciudad_169241-1069.jpg" alt="Imagen tienda 2">
-            <p>ubicación de la tienda 2</p>
-            <a href="#">mapa ubicación</a>
-        </div>
-        <br>
-        <div>
-            <img src="../img/tienda-vector-o-fachada-exterior-frente-tienda-mercado-fondo-ilustracion-vector_175838-1936.jpg"
-                alt="Imagen tienda 3">
-            <p>ubicación de la tienda 3</p>
-            <a href="#">mapa ubicación</a>
-        </div>
-
-        <footer>
-            <div>
-                <button type="button">SUSCRIBETE</button>
+                <br>
+                <div class="tienda2">
+                    <img class="tien2" src="../img/tienda-productos-diarios-ciudad_169241-1069.jpg" alt="Imagen tienda 2">
+                    <p>ubicación de la tienda 2</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1375.2697995915678!2d-57.9523599904024!3d-34.932508490984915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680674031654!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <br>
+                <div class="tienda3">
+                    <img class="tien3" src="../img/tienda-vector-o-fachada-exterior-frente-tienda-mercado-fondo-ilustracion-vector_175838-1936.jpg"
+                        alt="Imagen tienda 3">
+                    <p>ubicación de la tienda 3</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1375.5721366542853!2d-57.93926191048598!3d-34.91447056857921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680674083556!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
-            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-            <div class="redes">
-                <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
-                <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
-                <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
-            </div>
-        </footer>
-    </section>
-</div>
+            <footer>
+                <div>
+                    <button type="button">SUSCRIBETE</button>
+                </div>
+                <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+                <div class="redes">
+                    <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+                    <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+                    <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+                </div>
+            </footer>
+        </section>
+    </div>
 </body>
 
 </html>
