modificacion tienda, imagenes, mapas

--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -39,23 +39,22 @@
             <h1 class="tiendas">Tiendas</h1>
             <div class="grupo_tiendas">
                 <div class="tienda1">
-                    <img class="tien1" src="../img/estilo-dibujos-animados-vista-tienda-cafe_134830-697.jpg" alt="Imagen tienda 1">
+                    <img class="tien1" src="../img/1.jpg" alt="Imagen tienda 1">
 
-                    <p>ubicación de la tienda 1</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2312.942762731088!2d-57.97361190439653!3d-34.931661750675815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680673953773!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <p class="geo">Rockburger 1</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d486.34473106547665!2d-57.93921165373324!3d-34.913367001768314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e63d7fc78f25%3A0x5c5fd7887bf62b31!2sC.%2057%20321%2C%20B1900BMM%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1680805514710!5m2!1ses-419!2sar" width="350" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <br>
                 <div class="tienda2">
-                    <img class="tien2" src="../img/tienda-productos-diarios-ciudad_169241-1069.jpg" alt="Imagen tienda 2">
-                    <p>ubicación de la tienda 2</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1375.2697995915678!2d-57.9523599904024!3d-34.932508490984915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680674031654!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <img class="tien2" src="../img/2.jpeg" alt="Imagen tienda 2">
+                    <p class="geo">Rockburger 2</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d578.3073044273409!2d-57.94021148304067!3d-34.921500540358686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e621f03d0273%3A0x1175930817aab4ba!2sC.%2061%20584%2C%20B1904%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1680805638156!5m2!1ses-419!2sar" width="350" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <br>
                 <div class="tienda3">
-                    <img class="tien3" src="../img/tienda-vector-o-fachada-exterior-frente-tienda-mercado-fondo-ilustracion-vector_175838-1936.jpg"
-                        alt="Imagen tienda 3">
-                    <p>ubicación de la tienda 3</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1375.5721366542853!2d-57.93926191048598!3d-34.91447056857921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1680674083556!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <img class="tien3" src="../img/3.jpg" alt="Imagen tienda 3">
+                    <p class="geo">Rockburger 3</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d817.8165082932019!2d-57.95080317073976!3d-34.92486439919713!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6261d939e9d%3A0x3a1a39013f487e56!2sAv.%2013%201243%2C%20B1900DTF%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1680805759669!5m2!1ses-419!2sar" width="350" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <footer>
