--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rockburger</title>
     <link rel="icon" href="./img/burger_logoico.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./img/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 
 </head>
 
