--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../img/burger_logoico.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="../img/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 
 </head>
 
