--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./img/burger_logoico.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style/style.css">
-
+<script defer src="index.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                     </label>
                     <nav class="nav">
                         <div class="menu1">
-                            <ul>
+                            <ul class="nav-menu_visibe">
                                 <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
                                 <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
                                 <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
