--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rockburger - Productos</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link rel="icon" href="../img/burger_logoico.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
@@ -18,22 +19,17 @@
     <section class="pagina_productos">
       <header class="header">
         <a href="../index.html"><img src="../img/burger_logo.png" class="logo1" alt="Inicio"></a>
-        <input type="checkbox" id="menu">
-        <label for="menu">
-          <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
-        </label>
-        <nav class="nav">
-          <div class="menu1">
-            <ul>
-              <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
-              <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
-              <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
-              <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
-            </ul>
-          </div>
-          <img class="logo2" src="../img/burger_logo.png" alt="logo2">
+        <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></button>
+        <nav class="nav" id="nav">
+            <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
+            <ul class="nav-list">
+                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+            </ul>                        
         </nav>
-      </header>
+    </header>
 
       <h1 class="productos">Productos</h1>
 
@@ -128,6 +124,7 @@
     <script src="../bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js"></script>
     <script src=""></script>
   </div>
+  <script src="../script.js"></script>
 </body>
 
 
